--- a/src/survey.html
+++ b/src/survey.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1 id="title">Survey Form</h1>
+    <p id="description">Vote for your favorite programming languages.</p>
 </body>
 </html>
