Implement User Story #3

--- a/src/survey.html
+++ b/src/survey.html
@@ -9,5 +9,6 @@
 <body>
     <h1 id="title">Survey Form</h1>
     <p id="description">Vote for your favorite programming languages.</p>
+    <form id="survey-form"></form>
 </body>
 </html>
