Implement User Story #4

--- a/src/survey.html
+++ b/src/survey.html
@@ -9,6 +9,8 @@
 <body>
     <h1 id="title">Survey Form</h1>
     <p id="description">Vote for your favorite programming languages.</p>
-    <form id="survey-form"></form>
+    <form id="survey-form">
+        <label>Enter your name: <input id="name" type="text"></input></label>
+    </form>
 </body>
 </html>
