Implement User Story #5

--- a/src/survey.html
+++ b/src/survey.html
@@ -11,6 +11,7 @@
     <p id="description">Vote for your favorite programming languages.</p>
     <form id="survey-form">
         <label>Enter your name: <input id="name" type="text"></input></label>
+        <label>Enter your email: <input id="email" type="email"></input></label>
     </form>
 </body>
 </html>
