Implement User Story #7

--- a/src/survey.html
+++ b/src/survey.html
@@ -12,6 +12,7 @@
     <form id="survey-form">
         <label>Enter your name: <input id="name" type="text"></input></label>
         <label>Enter your email: <input id="email" type="email" required></input></label>
+        <label>Number: <input id="number" type="number"></input></label>
     </form>
 </body>
 </html>
