--- a/src/survey.html
+++ b/src/survey.html
@@ -10,9 +10,9 @@
     <h1 id="title">Survey Form</h1>
     <p id="description">Vote for your favorite programming languages.</p>
     <form id="survey-form">
-        <label>Enter your name: <input id="name" type="text"></input></label>
-        <label>Enter your email: <input id="email" type="email" required></input></label>
-        <label>Number: <input id="number" type="number"></input></label>
+        <label>Enter your name: <input id="name" type="text" /></label>
+        <label>Enter your email: <input id="email" type="email" required /></label>
+        <label>Number: <input id="number" type="number" /></label>
     </form>
 </body>
 </html>
