Implement User Story #9

--- a/src/survey.html
+++ b/src/survey.html
@@ -12,7 +12,7 @@
     <form id="survey-form">
         <label>Enter your name: <input id="name" type="text" /></label>
         <label>Enter your email: <input id="email" type="email" required /></label>
-        <label>Number: <input id="number" type="number" /></label>
+        <label>Number: <input id="number" type="number" min="0" max="20" /></label>
     </form>
 </body>
 </html>
