Implement User Story #12

--- a/src/survey.html
+++ b/src/survey.html
@@ -13,6 +13,12 @@
         <label id="name-label">Enter your name: <input id="name" type="text" placeholder="John Silva" /></label>
         <label id="email-label">Enter your email: <input id="email" type="email" placeholder="silvajohn@example.com" required /></label>
         <label id="number-label">Number: <input id="number" type="number" placeholder="2" min="0" max="20" /></label>
+        <label>Dropdown:
+            <select id="dropdown">
+                <option>(select one)</option>
+                <option>one</option>
+            </select>
+        </label>
     </form>
 </body>
 </html>
