Implement User Story #13

--- a/src/survey.html
+++ b/src/survey.html
@@ -19,6 +19,8 @@
                 <option>one</option>
             </select>
         </label>
+        <label><input type="radio" name="radio-btn" /> One</label>
+        <label><input type="radio" name="radio-btn" /> Two</label>
     </form>
 </body>
 </html>
