--- a/src/survey.html
+++ b/src/survey.html
@@ -21,6 +21,12 @@
         </label>
         <label><input type="radio" name="radio-btn" /> One</label>
         <label><input type="radio" name="radio-btn" /> Two</label>
+        <label>
+            <input type="checkbox" value="0" /> Check-me</a>
+        </label>
+        <label>
+            <input type="checkbox" value="1" /> No, check-me!</a>
+        </label>
     </form>
 </body>
 </html>
