Implement User Story #15

--- a/src/survey.html
+++ b/src/survey.html
@@ -27,6 +27,9 @@
         <label>
             <input type="checkbox" value="1" /> No, check-me!</a>
         </label>
+        <label>Text area:
+            <textarea cols="30" rows="5"></textarea>
+        </label>
     </form>
 </body>
 </html>
