Implement User Story #16

--- a/src/survey.html
+++ b/src/survey.html
@@ -30,6 +30,7 @@
         <label>Text area:
             <textarea cols="30" rows="5"></textarea>
         </label>
+        <input id="submit" type="submit">
     </form>
 </body>
 </html>
