--- a/src/survey.html
+++ b/src/survey.html
@@ -10,7 +10,7 @@
     <h1 id="title">Survey Form</h1>
     <p id="description">Vote for your favorite programming languages.</p>
     <form id="survey-form">
-        <label id="name-label">Enter your name: <input id="name" type="text" placeholder="John Silva" /></label>
+        <label id="name-label">Enter your name: <input id="name" type="text" placeholder="John Silva" required /></label>
         <label id="email-label">Enter your email: <input id="email" type="email" placeholder="silvajohn@example.com" required /></label>
         <label id="number-label">Number: <input id="number" type="number" placeholder="2" min="0" max="20" /></label>
         <label>Dropdown:
