Add a value attribute for each radio button

--- a/src/survey.html
+++ b/src/survey.html
@@ -19,8 +19,8 @@
                 <option>one</option>
             </select>
         </label>
-        <label><input type="radio" name="radio-btn" /> One</label>
-        <label><input type="radio" name="radio-btn" /> Two</label>
+        <label><input type="radio" name="radio-btn" value="1" /> One</label>
+        <label><input type="radio" name="radio-btn" value="2" /> Two</label>
         <label>
             <input type="checkbox" value="0" /> Check-me</a>
         </label>
