--- a/src/survey.html
+++ b/src/survey.html
@@ -8,8 +8,10 @@
     <title>Survey Form</title>
 </head>
 <body>
-    <h1 id="title">Survey Form</h1>
-    <p id="description">Vote for your favorite programming languages.</p>
+    <header>
+        <h1 id="title">Survey Form</h1>
+        <p id="description">Vote for your favorite programming languages.</p>
+    </header>
     <form id="survey-form">
         <label id="name-label">Enter your name: <input id="name" type="text" placeholder="John Silva" required /></label>
         <label id="email-label">Enter your email: <input id="email" type="email" placeholder="silvajohn@example.com" required /></label>
