--- a/src/survey.html
+++ b/src/survey.html
@@ -13,26 +13,34 @@
         <p id="description">Vote for your favorite programming languages.</p>
     </header>
     <form id="survey-form">
-        <label id="name-label">Enter your name: <input id="name" type="text" placeholder="John Silva" required /></label>
-        <label id="email-label">Enter your email: <input id="email" type="email" placeholder="silvajohn@example.com" required /></label>
-        <label id="number-label">Number: <input id="number" type="number" placeholder="2" min="0" max="20" /></label>
-        <label>Dropdown:
-            <select id="dropdown">
-                <option>(select one)</option>
-                <option>one</option>
-            </select>
-        </label>
-        <label><input type="radio" name="radio-btn" value="1" /> One</label>
-        <label><input type="radio" name="radio-btn" value="2" /> Two</label>
-        <label>
-            <input type="checkbox" value="0" /> Check-me</a>
-        </label>
-        <label>
-            <input type="checkbox" value="1" /> No, check-me!</a>
-        </label>
-        <label>Text area:
-            <textarea cols="30" rows="5"></textarea>
-        </label>
+        <fieldset>
+            <label id="name-label">Enter your name: <input id="name" type="text" placeholder="John Silva" required /></label>
+            <label id="email-label">Enter your email: <input id="email" type="email" placeholder="silvajohn@example.com" required /></label>
+        </fieldset>
+        <fieldset>
+            <label id="number-label">Number: <input id="number" type="number" placeholder="2" min="0" max="20" /></label>
+            <label>Dropdown:
+                <select id="dropdown">
+                    <option>(select one)</option>
+                    <option>one</option>
+                </select>
+            </label>
+        </fieldset>
+        <fieldset>
+            <label><input type="radio" name="radio-btn" value="1" /> One</label>
+            <label><input type="radio" name="radio-btn" value="2" /> Two</label>
+            <label>
+                <input type="checkbox" value="0" /> Check-me
+            </label>
+            <label>
+                <input type="checkbox" value="1" /> No, check-me!
+            </label>
+        </fieldset>
+        <fieldset>
+            <label>Text area:
+                <textarea cols="30" rows="5"></textarea>
+            </label>
+        </fieldset>
         <input id="submit" type="submit">
     </form>
 </body>
