Add :root selector, store colors as variables, update survey.html

--- a/src/survey.html
+++ b/src/survey.html
@@ -19,9 +19,18 @@
             <label id="number-label">What is your age? <input id="number" type="number" placeholder="21" min="0" max="120" required /></label>
             <div class="radio-group">
                 <label class="question radio-question">What is your gender?</label>
-                <label class="radio-label"><input type="radio" name="radio-btn" value="1" required /> Man</label>
-                <label class="radio-label"><input type="radio" name="radio-btn" value="2" required /> Woman</label>
-                <label class="radio-label"><input type="radio" name="radio-btn" value="3" required /> Prefer not to say</label>
+                <label class="radio-label">
+                    <input type="radio" name="radio-btn" value="1" required />
+                    Man
+                </label>
+                <label class="radio-label">
+                    <input type="radio" name="radio-btn" value="2" required />
+                    Woman
+                </label>
+                <label class="radio-label">
+                    <input type="radio" name="radio-btn" value="3" required />
+                    Prefer not to say
+                </label>
             </div>
             <label>Where do you live?</label>       
             <select id="dropdown">
@@ -274,9 +283,16 @@
         <fieldset>
             <div class="radio-group">
                 <label class="question radio-question">Do you work professionally at the moment?</label>
-                <label class="radio-label"><input type="radio" name="radio-btn" value="Y" required /> Yes</label>
-                <label class="radio-label"><input type="radio" name="radio-btn" value="N" required /> No</label>
-                <label class="radio-label"><input type="radio" name="radio-btn" value="O" required /> Prefer not to say</label>
+                <label class="radio-label">
+                    <input type="radio" name="radio-btn" value="Y" required />
+                    Yes
+                </label>
+                <label class="radio-label"><input type="radio" name="radio-btn" value="N" required />
+                    No
+                </label>
+                <label class="radio-label"><input type="radio" name="radio-btn" value="O" required />
+                    Prefer not to say
+                </label>
             </div>
             <label id="number-label">How many years have you been coding in total? <input id="number" type="number" placeholder="8" min="0" max="120" required /></label>
         </fieldset>
