--- a/src/survey.html
+++ b/src/survey.html
@@ -21,14 +21,17 @@
                 <label class="question radio-question">What is your gender?</label>
                 <label class="radio-label">
                     <input type="radio" name="radio-btn" value="1" required />
+                    <span class="radiomark"></span>
                     Man
                 </label>
                 <label class="radio-label">
                     <input type="radio" name="radio-btn" value="2" required />
+                    <span class="radiomark"></span>
                     Woman
                 </label>
                 <label class="radio-label">
                     <input type="radio" name="radio-btn" value="3" required />
+                    <span class="radiomark"></span>
                     Prefer not to say
                 </label>
             </div>
@@ -285,12 +288,17 @@
                 <label class="question radio-question">Do you work professionally at the moment?</label>
                 <label class="radio-label">
                     <input type="radio" name="radio-btn" value="Y" required />
+                    <span class="radiomark"></span>
                     Yes
                 </label>
-                <label class="radio-label"><input type="radio" name="radio-btn" value="N" required />
+                <label class="radio-label">
+                    <input type="radio" name="radio-btn" value="N" required />
+                    <span class="radiomark"></span>
                     No
                 </label>
-                <label class="radio-label"><input type="radio" name="radio-btn" value="O" required />
+                <label class="radio-label">
+                    <input type="radio" name="radio-btn" value="O" required />
+                    <span class="radiomark"></span>
                     Prefer not to say
                 </label>
             </div>
