Fix radio input name attribute

--- a/src/survey.html
+++ b/src/survey.html
@@ -20,17 +20,17 @@
             <div class="radio-group">
                 <label class="question radio-question">What is your gender?</label>
                 <label class="radio-label">
-                    <input type="radio" name="radio-btn" value="1" required />
+                    <input type="radio" name="gender" value="1" required />
                     <span class="radiomark"></span>
                     Man
                 </label>
                 <label class="radio-label">
-                    <input type="radio" name="radio-btn" value="2" required />
+                    <input type="radio" name="gender" value="2" required />
                     <span class="radiomark"></span>
                     Woman
                 </label>
                 <label class="radio-label">
-                    <input type="radio" name="radio-btn" value="3" required />
+                    <input type="radio" name="gender" value="3" required />
                     <span class="radiomark"></span>
                     Prefer not to say
                 </label>
@@ -287,17 +287,17 @@
             <div class="radio-group">
                 <label class="question radio-question">Do you work professionally at the moment?</label>
                 <label class="radio-label">
-                    <input type="radio" name="radio-btn" value="Y" required />
+                    <input type="radio" name="doesWork" value="Y" required />
                     <span class="radiomark"></span>
                     Yes
                 </label>
                 <label class="radio-label">
-                    <input type="radio" name="radio-btn" value="N" required />
+                    <input type="radio" name="doesWork" value="N" required />
                     <span class="radiomark"></span>
                     No
                 </label>
                 <label class="radio-label">
-                    <input type="radio" name="radio-btn" value="O" required />
+                    <input type="radio" name="doesWork" value="O" required />
                     <span class="radiomark"></span>
                     Prefer not to say
                 </label>
