Update submit input style

--- a/src/survey.html
+++ b/src/survey.html
@@ -466,7 +466,7 @@
                 <textarea rows="5" placeholder="Yeah! I actually think..."></textarea>
             </label>
         </fieldset>
-        <input id="submit" type="submit">
+        <input id="submit" type="submit" class="submit-btn">
     </form>
 </body>
 </html>
