--- a/src/survey.html
+++ b/src/survey.html
@@ -468,5 +468,16 @@
         </fieldset>
         <input id="submit" type="submit" class="submit-btn">
     </form>
+    <footer>
+        <p>© srjheam</p>
+        <div>
+            <a href="https://github.com/srjheam" rel="external" target="_blank">
+                <img src="img/github-logo.png" alt="GitHub logo hyperlink to my profile">
+            </a>
+            <a href="https://www.freecodecamp.org/srjheam"  rel="external" target="_blank">
+                <img src="img/fcc-logo.png" alt="freeCodeCamp.org logo hyperlink to my profile">
+            </a>
+        </div>
+    </footer>
 </body>
 </html>
